# OpenGLSamples

./: .gitmodules  settings.gradle
01-Angeles/: CMakeLists.txt  build.gradle
01-Angeles/src/main/: AndroidManifest.xml
01-Angeles/src/main/cpp/: GLUtils.h  NativeMain.cpp  OpenGL2Basic.cpp  demo.c  demo.h
01-Angeles/src/main/res/values/: strings.xml
02-VaoVbo/: CMakeLists.txt  build.gradle
02-VaoVbo/src/androidTest/java/com/luocj/opengl/vaovbo/: ExampleInstrumentedTest.java
02-VaoVbo/src/main/: AndroidManifest.xml
02-VaoVbo/src/main/assets/shaders/: basic.frag  basic.vert
02-VaoVbo/src/main/cpp/: EGLUtils.h  NativeMain.cpp  NativeMain.h  ShaderLoader.cpp  ShaderLoader.h  VaoVboDemo.cpp  VaoVboDemo.h  basic.frag  basic.vert
02-VaoVbo/src/main/res/values/: strings.xml
02-VaoVbo/src/test/java/com/luocj/opengl/vaovbo/: ExampleUnitTest.java
03-Texture/: build.gradle
03-Texture/src/main/: AndroidManifest.xml
04_YuvTex/: CMakeLists.txt  build.gradle
04_YuvTex/src/main/: AndroidManifest.xml
04_YuvTex/src/main/cpp/: gl2_yuvtex.cpp
04_YuvTex/src/main/res/values/: strings.xml
05_PBufferDemo/: build.gradle
05_PBufferDemo/src/main/: AndroidManifest.xml
05_PBufferDemo/src/main/res/layout/: activity_p_buffer_demo.xml
05_PBufferDemo/src/main/res/values/: strings.xml
06_PBufferCDemo/: CMakeLists.txt  build.gradle
06_PBufferCDemo/src/main/: AndroidManifest.xml
06_PBufferCDemo/src/main/assets/shaders/: fragment.frag  fragmentp.frag  (+2 more)
06_PBufferCDemo/src/main/cpp/: PBufferDemo.cpp  PBufferDemo.h  PBufferDraw.cpp  PBufferDraw.h  utils.h
07_Simple_Noise/: CMakeLists.txt  build.gradle
07_Simple_Noise/src/main/: AndroidManifest.xml
07_Simple_Noise/src/main/cpp/: Simple_Texture2D.cpp
08_Random_Noise/: CMakeLists.txt  build.gradle
08_Random_Noise/src/main/: AndroidManifest.xml
08_Random_Noise/src/main/cpp/: PngHandler.cpp  PngHandler.h  RandomNoise.cpp  RandomNoise.h
CH01-01-Hello_Triangle/: CMakeLists.txt  build.gradle
CH01-01-Hello_Triangle/src/androidTest/java/com/luocj/opengl/hello_triangle/: ExampleInstrumentedTest.java
CH01-01-Hello_Triangle/src/main/: AndroidManifest.xml
CH01-01-Hello_Triangle/src/main/cpp/: Hello_Triangle.cpp  VaoVboDemo.cpp  VaoVboDemo.h
CH01-01-Hello_Triangle/src/test/java/com/luocj/opengl/hello_triangle/: ExampleUnitTest.java
CH06-06-VBOAndNonVBO/: CMakeLists.txt  build.gradle
CH06-06-VBOAndNonVBO/src/androidTest/java/com/luocj/opengl/vboandnonvbo/: ExampleInstrumentedTest.java
CH06-06-VBOAndNonVBO/src/main/: AndroidManifest.xml
CH06-06-VBOAndNonVBO/src/main/cpp/: Example_6_6.cpp
CH06-06-VBOAndNonVBO/src/main/res/values/: strings.xml
CH06-06-VBOAndNonVBO/src/test/java/com/luocj/opengl/vboandnonvbo/: ExampleUnitTest.java
CH06-07-VertexArrayObjects/: CMakeLists.txt  build.gradle
CH06-07-VertexArrayObjects/src/main/: AndroidManifest.xml
CH06-07-VertexArrayObjects/src/main/cpp/: VertexArrayObjects.cpp
CH06-08-MapBuffers/: CMakeLists.txt  build.gradle
CH06-08-MapBuffers/src/androidTest/java/com/luocj/opengl/mapbuffers/: ExampleInstrumentedTest.java
CH06-08-MapBuffers/src/main/: AndroidManifest.xml
CH06-08-MapBuffers/src/main/cpp/: MapBuffers.cpp
CH06-08-MapBuffers/src/test/java/com/luocj/opengl/mapbuffers/: ExampleUnitTest.java
CH08-01-Simple_VertexShader/: CMakeLists.txt  build.gradle
CH08-01-Simple_VertexShader/src/androidTest/java/com/luocj/opengl/simple_vertexshader/: ExampleInstrumentedTest.java
CH08-01-Simple_VertexShader/src/main/: AndroidManifest.xml
CH08-01-Simple_VertexShader/src/main/cpp/: Simple_VertexShader.cpp
CH08-01-Simple_VertexShader/src/main/res/values/: strings.xml
CH08-01-Simple_VertexShader/src/test/java/com/luocj/opengl/simple_vertexshader/: ExampleUnitTest.java
CH09-01-Simple_Texture2D/: build.gradle
CH09-01-Simple_Texture2D/src/main/: AndroidManifest.xml
CH09-01-Simple_Texture2D/src/main/cpp/: Simple_Texture2D.cpp
CH09-02-MipMap2D/: CMakeLists.txt  build.gradle
CH09-02-MipMap2D/src/main/: AndroidManifest.xml
CH09-02-MipMap2D/src/main/cpp/: MipMap2D.cpp
CH09-03-TextureWrap/: CMakeLists.txt  build.gradle
CH09-03-TextureWrap/src/androidTest/java/com/luocj/opengl/texturewrap/: ExampleInstrumentedTest.java
CH09-03-TextureWrap/src/main/: AndroidManifest.xml
CH09-03-TextureWrap/src/main/cpp/: TextureWrap.cpp
CH09-03-TextureWrap/src/main/res/values/: strings.xml
CH09-03-TextureWrap/src/test/java/com/luocj/opengl/texturewrap/: ExampleUnitTest.java
CH09-04-Simple_TextureCubemap/: CMakeLists.txt  build.gradle
CH09-04-Simple_TextureCubemap/src/main/: AndroidManifest.xml
CH09-04-Simple_TextureCubemap/src/main/cpp/: Simple_TextureCubemap.cpp
CH09-05-PNGTexture/: CMakeLists.txt  build.gradle
CH09-05-PNGTexture/src/androidTest/java/com/lcj/opengles/pngtexture/: ExampleInstrumentedTest.java
CH09-05-PNGTexture/src/main/: AndroidManifest.xml
CH09-05-PNGTexture/src/main/assets/shaders/: fragment.frag  vertex.vert
CH09-05-PNGTexture/src/main/cpp/: PngHandler.cpp  PngHandler.h  TextureWrap.cpp  utils.cpp  utils.h
CH09-05-PNGTexture/src/main/java/com/lcj/opengles/pngtexture/: MainActivity.java  PermisionUtils.java  SomeArgs.java  StartingActivity.java
CH09-05-PNGTexture/src/main/res/layout/: activity_image_thumbnail.xml  activity_staring.xml
CH09-05-PNGTexture/src/main/res/values/: strings.xml
CH09-05-PNGTexture/src/test/java/com/lcj/opengles/pngtexture/: ExampleUnitTest.java
CH10-01-MultiTexture/: CMakeLists.txt  build.gradle
CH10-01-MultiTexture/src/main/: AndroidManifest.xml
CH10-01-MultiTexture/src/main/cpp/: MultiTexture.cpp
CH11_01_MRTs/: CMakeLists.txt  build.gradle
CH11_01_MRTs/src/main/: AndroidManifest.xml
CH11_01_MRTs/src/main/cpp/: MRTs.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
include/androidnative/: NativeMain.h  ShaderLoader.h
include/utils/: AssetUtils.h  EGLUtils.h  GLUtils.h
libs/androidnative/: CMakeLists.txt  MyLog.cpp  NativeMain.cpp  ShaderLoader.cpp
libs/glesutils/: AssetUtils.cpp  CMakeLists.txt  GLESUtils.cpp  Shapes.cpp
(+47 files in other folders)
